# Production-Workshop-TethysSummit-2026

./: .dockerignore  .env  .env.example  .env2  .gitattributes  .gitignore  DockerFile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tethys_deps.txt
conf/: portal_config.yml  tethys_nginx.conf
conf/postgres-initdb/: 10-create-tethys-db.sh
dev/: publish-static.sh
dev/k8s/: ha-probe.sh  setup-cluster.sh  traefik-values.yaml
dev/vm/: fresh_start.sh  setup.sh
docs/: workshop-concepts.md
k8s/: 10-cnpg-postgres.yaml  10-cnpg.yaml  100-gateway-api.yaml  20-valkey.yaml  30-tethys-pvcs.yaml  40-tethys-config.yaml  40-tethys-pvc.yaml  50-tethys-config.yaml  60-tethys-init-job.yaml  60-tethys-secret.yaml  70-tethys-init-job.yaml  70-tethys-web.yaml  80-tethys-web.yaml  90-nginx.yaml
k8s/base/: 00-namespace.yaml  05-traefik-gatewayapi.yaml  10-cnpg-postgres.yaml  15-cnpg-pooler.yaml  50-tethys-secret.yaml  60-tethys-init-job.yaml  70-tethys-web.yaml  80-nginx.yaml  90-gateway-api.yaml  kustomization.yaml  portal_config.yml  tethys-config.env
k8s/overlays/local/: kustomization.yaml
k8s/overlays/shared/: kustomization.yaml
kubernetes/: api.yaml
scripts/: configure-portal.sh  db-migrations.sh  init-tethys.sh  portal-bootstrap.sh  portal-config.sh  portal-user-bootstrap.sh  provision-persistent-store.sh  publish-static.sh  run.sh  start-uvicorn.sh
